elk/kibana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app: kibana-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.phan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601
  tls:
    - hosts:
        - kibana.phan
      secretName: tls-example
